manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starlight-minimalistic-theme
  namespace: starlight-minimalistic-theme
  labels:
    app: starlight-minimalistic-theme
spec:
  replicas: 3
  selector:
    matchLabels:
      app: starlight-minimalistic-theme
  template:
    metadata:
      labels:
        app: starlight-minimalistic-theme
    spec:
      containers:
        - name: starlight-minimalistic-theme
          image: "trueberryless/starlight-minimalistic-theme"
          imagePullPolicy: Always
