manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-minimalistic-theme
  namespace: starlight-minimalistic-theme
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: starlight-minimalistic-theme
  ports:
    - name: http
      port: 80
