manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starlight-minimalistic-theme
  namespace: starlight-minimalistic-theme
spec:
  rules:
    - host: starlight-minimalistic-theme.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: starlight-minimalistic-theme
                port:
                  number: 80

  tls:
    - hosts:
        - starlight-minimalistic-theme.trueberryless.org
      secretName: starlight-minimalistic-theme
